- fixed a video loading isue - fixed an issue with the library modal - fixed portrait blurred background

--- a/frontend/src/css/_detail.scss
+++ b/frontend/src/css/_detail.scss
@@ -218,6 +218,15 @@
     .scrollable{
       left:70px;
     }
+    .blurred .poster {
+      width:100%;
+      bottom: 0;
+      top: 0;
+      left: 0;
+      right: 0;
+      background-size: cover;
+      background-position: center center;
+    }
   }
   .movie-detail-backdrop {
     display:none;
